--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Qqhahaboy.GitHub.io</h1>
-      <h2 class="project-tagline"></h2>
+      <h1 class="project-name">HelloWorld</h1>
+      <h2 class="project-tagline">I'm too simple and too naive.</h2>
     </section>
 
     <section class="main-content">
