--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="main-content">
       <h1>
-<a id="qqhahaboygithubio" class="anchor" href="#qqhahaboygithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>qqhahaboy.github.io</h1>
+<a id="qqhahaboygithubio" class="anchor" href="#qqhahaboygithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a></h1>
 
       <footer class="site-footer">
 
